--- a/build.gradle
+++ b/build.gradle
@@ -28,6 +28,10 @@ dependencies {
     implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
     implementation 'org.springframework.boot:spring-boot-starter-web'
     implementation 'org.springframework.boot:spring-boot-starter-validation'
+    implementation 'org.springframework.boot:spring-boot-starter-data-redis'
+    implementation 'org.springframework.boot:spring-boot-starter-data-redis-reactive'
+    implementation 'org.springframework.boot:spring-boot-starter-websocket'
+    testImplementation 'io.projectreactor:reactor-test'
     compileOnly 'org.projectlombok:lombok'
     annotationProcessor 'org.projectlombok:lombok'
     testImplementation 'org.springframework.boot:spring-boot-starter-test'
@@ -35,6 +39,8 @@ dependencies {
     runtimeOnly 'com.mysql:mysql-connector-j'
     implementation 'com.fasterxml.jackson.core:jackson-annotations:2.18.1'
     testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
+    // object storage
+    implementation 'com.amazonaws:aws-java-sdk-s3:1.12.610'
 }
 
 tasks.named('test') {
